# mtx-simple-app

./: .env.dist  .gitignore  README.md  pyproject.toml
auth/: adapter.py  test.py  urls.py  validators.py  views.py
auth/registration/: urls.py
frontsite/: urls.py
mysite/: settings.py  urls.py
mysite/auth/: views.py
mysite/auth/registration/: views.py
mysite/frontsite/: urls.py
mysite/mysite/: settings.py  urls.py
mysite/templates/: dashboard.html  email_verification.html  home.html  signup.html
templates/: dashboard.html  email_verification.html  home.html  signup.html
user/: middleware.py  models.py  serializers.py  tests.py  urls.py  views.py
user/migrations/: 0001_initial.py
